Mapping jdk19 foreign incubator types to release foreign types