@@ -1004,7 +1004,6 @@
         <version>${maven-surefire-plugin.version}</version>
         <configuration>
           <argLine>
-            --add-modules jdk.incubator.foreign
             --enable-native-access=ALL-UNNAMED
             --add-opens java.desktop/java.awt=ALL-UNNAMED
             --add-opens java.desktop/sun.awt.windows=ALL-UNNAMED
